# smart_esprit

./: main.c
Agent_de_foyer/projet/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projet.glade  projet.gladep.bak
Agent_de_foyer/projet/autom4te.cache/: output.1  requests  traces.0  traces.1
Agent_de_foyer/projet/po/: Makefile  Makefile.in
Agent_de_foyer/projet/src/: Agent_de_foyer.c  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  etudiant.txt  fonction.h  interface.c  interface.h  main.c  temp.txt  tt
Agent_de_foyer/projet/src/.deps/: Agent_de_foyer.Po  main.Po
SMART_ESPRIT_VF/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  technicien.glade.bak  technicien.gladep.bak
SMART_ESPRIT_VF/autom4te.cache/: output.0  requests  traces.0  traces.1
SMART_ESPRIT_VF/po/: Makefile  Makefile.in
SMART_ESPRIT_VF/src/: Agent_de_foyer.c  Makefile  Makefile.am  Makefile.in  callbacks-khouloud.c  callbacks.c  callbacks.h  capteurs.txt  crud.c  dechet.txt  etudiant.txt  fonction_fakhri.c  fonction_fakhri.h  interface.c  interface.h.bak  main.c  menu.c  menu.h  menu.txt  mouvement.txt  technicien  temp.txt  tree.c  tree.h
SMART_ESPRIT_VF/src/.deps/: callbacks.Po  fonction_fakhri.Po
